--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@ngrx/data": "^15.2.1",
     "@ngrx/store": "^15.2.1",
     "@ngrx/store-devtools": "^15.2.1",
+    "@types/three": "^0.148.1",
     "font-awesome": "^4.7.0",
-    "phaser": "^3.55.2",
     "rxjs": "~7.8.0",
+    "three": "^0.149.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
