--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rxjs": "~7.8.0",
     "three": "^0.149.0",
     "tslib": "^2.3.0",
+    "tweenjs": "^1.0.2",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@angular/cli": "~15.1.3",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/tween.js": "^18.6.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
