--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
     "three": "^0.149.0",
+    "three-nebula": "^10.0.3",
     "tslib": "^2.3.0",
     "tweenjs": "^1.0.2",
     "zone.js": "~0.12.0"
@@ -35,6 +36,7 @@
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.16.3",
     "@types/tween.js": "^18.6.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
